--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -27,6 +27,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: techtrends
+          context: ./techtrends
           push: true
           tags: goosecoder/techtrends:latest
