--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -22,11 +22,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: List folder
+        run: |
+          ls -al
       -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./techtrends
+          context: .
+          file: ./techtrends/Dockerfile
           push: true
           tags: goosecoder/techtrends:latest
