--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -25,7 +25,7 @@ jobs:
       - 
         name: List folder
         run: |
-          ls -al
+          ls -al techtrends
       -
         name: Build and push
         id: docker_build
